[gd_scene load_steps=6 format=2]

[ext_resource path="res://Red/Pixellari.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Red/MAIN_MENU.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 72
outline_size = 4
outline_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
extra_spacing_char = 1
extra_spacing_space = 1
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.380392, 0.643137, 0.835294, 1 )

[sub_resource type="DynamicFont" id=3]
size = 72
outline_size = 4
font_data = ExtResource( 1 )

[node name="Control" type="Control" groups=[
"Menu",
]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.93634
margin_bottom = 2.93634
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 23.4907
margin_top = 44.045
margin_right = 1010.49
margin_bottom = 116.045
custom_fonts/font = SubResource( 1 )
text = "BATTLE DEMO MULTIPLAYER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main Panel" type="Panel" parent="."]
margin_left = 120.39
margin_top = 229.034
margin_right = 921.39
margin_bottom = 510.034
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Main Panel"]
margin_left = 5.87256
margin_right = 803.873
margin_bottom = 278.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Create" type="Button" parent="Main Panel/VBoxContainer"]
margin_top = 59.0
margin_right = 798.0
margin_bottom = 137.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0313726, 0.0980392, 0.643137, 1 )
action_mode = 0
text = "Crear Partida"
flat = true

[node name="Join" type="Button" parent="Main Panel/VBoxContainer"]
margin_top = 141.0
margin_right = 798.0
margin_bottom = 219.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0313726, 0.0980392, 0.643137, 1 )
action_mode = 0
text = "Unirse a Partida"
flat = true

[node name="SERVER PANEL" type="Panel" parent="."]
visible = false
margin_left = 120.0
margin_top = 236.0
margin_right = 921.0
margin_bottom = 512.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="SERVER PANEL"]
margin_left = 6.0
margin_right = 804.0
margin_bottom = 273.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cant_Players2" type="Button" parent="SERVER PANEL/VBoxContainer"]
margin_top = 15.0
margin_right = 798.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0313726, 0.0980392, 0.643137, 1 )
action_mode = 0
text = "2 Jugadores"
flat = true

[node name="Cant_Players3" type="Button" parent="SERVER PANEL/VBoxContainer"]
margin_top = 97.0
margin_right = 798.0
margin_bottom = 175.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0313726, 0.0980392, 0.643137, 1 )
action_mode = 0
text = "3 Jugadores"
flat = true

[node name="Cant_Players4" type="Button" parent="SERVER PANEL/VBoxContainer"]
margin_top = 179.0
margin_right = 798.0
margin_bottom = 257.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0313726, 0.0980392, 0.643137, 1 )
action_mode = 0
text = "4 Jugadores"
flat = true

[node name="CLIENT PANEL" type="Panel" parent="."]
visible = false
margin_left = 120.0
margin_top = 236.0
margin_right = 921.0
margin_bottom = 512.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CLIENT PANEL"]
margin_left = 6.0
margin_right = 804.0
margin_bottom = 273.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Status" type="Label" parent="CLIENT PANEL/VBoxContainer"]
margin_top = 59.0
margin_right = 798.0
margin_bottom = 131.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0313726, 0.0980392, 0.643137, 1 )
text = "Esperando Servidor..."
align = 1

[node name="START CLIENT" type="Button" parent="CLIENT PANEL/VBoxContainer"]
margin_top = 135.0
margin_right = 798.0
margin_bottom = 213.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0313726, 0.0980392, 0.643137, 1 )
disabled = true
action_mode = 0
text = "OK"
flat = true

[node name="PLAYERS PANEL" type="Panel" parent="."]
visible = false
margin_left = 113.0
margin_top = 236.0
margin_right = 921.0
margin_bottom = 559.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PLAYERS PANEL"]
margin_left = 6.0
margin_right = 804.0
margin_bottom = 278.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2_Status" type="Button" parent="PLAYERS PANEL/VBoxContainer"]
margin_right = 798.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0313726, 0.0980392, 0.643137, 1 )
action_mode = 0
text = "Configurar P2"
flat = true

[node name="Player3_Status" type="Button" parent="PLAYERS PANEL/VBoxContainer"]
margin_top = 82.0
margin_right = 798.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0313726, 0.0980392, 0.643137, 1 )
action_mode = 0
text = "Configurar P3"
flat = true

[node name="Player4_Status" type="Button" parent="PLAYERS PANEL/VBoxContainer"]
margin_top = 164.0
margin_right = 798.0
margin_bottom = 242.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0313726, 0.0980392, 0.643137, 1 )
action_mode = 0
text = "Configurar P4"
flat = true

[node name="START SERVER" type="Button" parent="PLAYERS PANEL/VBoxContainer"]
margin_top = 246.0
margin_right = 798.0
margin_bottom = 324.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0313726, 0.0980392, 0.643137, 1 )
disabled = true
action_mode = 0
text = "..."
flat = true
[connection signal="pressed" from="Main Panel/VBoxContainer/Create" to="." method="_on_Create_pressed"]
[connection signal="pressed" from="Main Panel/VBoxContainer/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="SERVER PANEL/VBoxContainer/Cant_Players2" to="." method="_on_Cant_Players2_pressed"]
[connection signal="pressed" from="SERVER PANEL/VBoxContainer/Cant_Players3" to="." method="_on_Cant_Players3_pressed"]
[connection signal="pressed" from="SERVER PANEL/VBoxContainer/Cant_Players4" to="." method="_on_Cant_Players4_pressed"]
[connection signal="pressed" from="CLIENT PANEL/VBoxContainer/START CLIENT" to="." method="_on_START_CLIENT_pressed"]
[connection signal="pressed" from="PLAYERS PANEL/VBoxContainer/Player2_Status" to="." method="_on_Player2_Status_pressed"]
[connection signal="pressed" from="PLAYERS PANEL/VBoxContainer/Player3_Status" to="." method="_on_Player3_Status_pressed"]
[connection signal="pressed" from="PLAYERS PANEL/VBoxContainer/Player4_Status" to="." method="_on_Player4_Status_pressed"]
[connection signal="pressed" from="PLAYERS PANEL/VBoxContainer/START SERVER" to="." method="_on_START_SERVER_pressed"]
